--- a/CSS/generos.css
+++ b/CSS/generos.css
@@ -4,7 +4,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("img\ sign\ in/i2.png");
+    background-image: url("../img\ sign\ in/i2.png");
 }
 
 .caja{
