--- a/CSS/usuariooficial.css
+++ b/CSS/usuariooficial.css
@@ -71,6 +71,27 @@ button {
 button:hover {
     opacity: 0.8;
 }
+.boton{ 
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    display: flex;
+    flex-direction: column;
+    transition: transform 0.3s ease;
+    gap: 15px;
+    width: 60%;
+    margin: 20px auto 0 auto;
+    padding: 9px;
+    border: none;
+    border-radius: 20px;
+    background-color: #6d4424;
+    color: #ffe1c8;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    margin-top: 22px;
+    
+}
 
 .caja p {
     text-align: center;
