--- a/CSS/generos.css
+++ b/CSS/generos.css
@@ -11,7 +11,7 @@ body {
     height:auto;
     width: 60vw;
     max-width: 1600px;
-    padding: 40px;
+    padding: 10px 10%; /*40px*/
     background: rgba(80, 55, 30, 0.55);
     backdrop-filter: blur(15px);
     border-radius: 20px;
@@ -57,6 +57,7 @@ body {
     color: #f5e6c8;
     border-radius: 12px;
     cursor: pointer;
+    gap: 3%;
 }
 
 .niveles input:checked + label {
@@ -88,16 +89,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.contenido{
-    width: 100%;
-    max-width: 600px;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.4s ease;
-    display: flex;
-    flex-direction: column;
 }
 
 .toggle:checked + label + .contenido{
@@ -133,7 +124,9 @@ body {
     overflow: hidden;
     opacity: 0;
 
-    transition: 0.4s ease;
+    transition: max-height 0.4s ease;
+    display: flex;
+    flex-direction: column;
 }
 
 .toggle:checked + .nivel + .contenido{
@@ -195,3 +188,6 @@ body {
     left: 2px;
     top: -1px;
 }
+
+
+
