--- a/CSS/usuariooficial.css
+++ b/CSS/usuariooficial.css
@@ -71,6 +71,32 @@ button {
 button:hover {
     opacity: 0.8;
 }
+
+.register {
+    width: 60%;
+    margin: 20px auto 0 auto;
+    padding: 9px;
+    padding: 10px;
+    border: none;
+    border-radius: 20px;
+    background-color: #6d4424;
+    color: #ffe1c8;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    margin-top: 22px;
+    
+    margin: 15px auto 0 auto;
+    display: block;
+    margin-top: 15px;
+    transition: 0.3s;
+}
+.register:hover {
+    background-color: #5a361b;
+    transform: scale(1.06);
+}
+
 .boton{ 
     font-family:Arial, Helvetica, sans-serif;
     font-size: 13px;
@@ -116,7 +142,7 @@ button:hover {
 }
 
 .ani:hover{
-    transform: scale(1.2);
+    transform: scale(1.06);
     transition: all .3s linear;
 }
 
